[package]
name = "todo-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
eyre = "0.6.8"
serde = { version = "1.0.174", features = ["derive"]}
serde_json = "1.0.103"
tui = "0.19.0"
